# OffEngine

./: CMakeLists.txt  README.md  temp.txt
include/: main.h
src/: constants.h  costume.cpp  costume.h  functions.cpp  functions.h  game.cpp  game.h  gameObject.cpp  gameObject.h  main.cpp  main.h  sprite.cpp  sprite.h  structs.h  window.cpp  window.h
